Changelog for Poi
=================


1.2.5 (unreleased)
------------------

- Nothing changed yet.


1.2.4 (2009-05-30)
------------------

- Deal with AttributeError in migration when called from the
  prefs_install_products_form (Plone 3.3) as we have no REQUEST object
  then.
  [maurits]

- Registered a checker for one of the upgrade steps, so this step is
  always available when there are old style PoiResponses.
  [maurits]

- Removed some event subscribers for old style responses, as they were
  not needed anymore and they might slow down the migration a bit.
  [maurits]

- Added state 'restricted' to poi tracker workflow; in this state
  anonymous can view issues and responses, but only members can add
  them.  Default stays the same: open for submissions from everyone.
  Fixes http://plone.org/products/poi/issues/214
  [maurits]

- Fixed the log page of an issue so the new style responses are shown.
  [maurits]

- Indent the response details in the email so they are correctly
  interpreted as a literal block after the double colon behind the
  'Response Details' header.  Otherwise the html part of an email
  would be in a simple pre tag or possibly show a warning.
  Fixes http://plone.org/products/poi/issues/215
  [maurits]

- Get the response add and edit forms working with kupu and TinyMCE
  (when ISSUE_MIME_TYPES is changed manually in config.py).  [maurits]


1.2.3 (2009-04-22)
------------------

- The html version of the emails that are sent out could contain
  warnings from the restructured text parser.  When that happens, we
  now simply put the text inside a pre tag.  [maurits]

- When email of user is not known, which can happen for example when
  this is an LDAP user, do not try to send this person an email
  Fixes http://plone.org/products/poi/issues/213
  [maurits]

- Remove stray div before DOCTYPE in add issue template. [elro]

- Registered the Poi upgrade steps for an upgrade from Poi 1.1.9