@@ -1,4 +1,11 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1201</version>
+  <version>1202</version>
+  <dependencies>
+<!--
+    AddRemoveWidget version 1.5+ needed, uncomment after released
+    <dependency>profile-Products.AddRemoveWidget:default</dependency>  
+-->
+    <dependency>profile-Products.DataGridField:default</dependency>
+  </dependencies>
 </metadata>
