@@ -5,7 +5,8 @@ Changelog for Poi
 1.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added dependecies to metadata.xml in profile. 
+  [jensens]
 
 
 1.2.4 (2009-05-30)
